samples/_failures_safe/1761551111_bb1908_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81ff2db9.c: In function ‘main’:
./samples/SAFE/__tmp_81ff2db9.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_81ff2db9.c:155:5: error: expected declaration or statement at end of input
  155 |     if
      |     ^~
